--- a/facebook.css
+++ b/facebook.css
@@ -71,7 +71,7 @@ p{
 p a{
     color: #1877f2;
     background-color: white;
-    style:none;
+    text-decoration:none;
 }
 .btn {
     padding: 7px;
